--- a/src/locales/zh-CN/translation.json
+++ b/src/locales/zh-CN/translation.json
@@ -13,5 +13,6 @@
   "confrim":"Confrim",
   "cancel":"Cancel",
   "modify":"Modify",
-  "delete":"Delete"
+  "delete":"Delete",
+  "confirmToDelete":"Confirm to delete?"
 }
