--- a/src/locales/zh-CN/translation.json
+++ b/src/locales/zh-CN/translation.json
@@ -10,7 +10,7 @@
   "mobile":"Mobile",
   "email":"Email",
   "actions":"Actions",
-  "confrim":"Confrim",
+  "confirm":"Confirm",
   "cancel":"Cancel",
   "modify":"Modify",
   "delete":"Delete",
